syntax = "proto3";
option go_package = "/pb";
package pb;

message TankEnum {
	enum type {
		UnknownType = 0;
		LT = 1;
		MT = 2;
		HT = 3;
		TD = 4;
		SPG = 5;
	}
	enum nation {
		UnknownNation = 0;
		C = 1;
		M = 2;
		S = 3;
		D = 4;
		R = 5;
		I = 6;
		J = 7;
		F = 8;
		B = 9;
		V = 10;
		Y = 11;
	}
	enum shop {
		Silver = 0;
		Gold = 1;
		Premium = 2;
	}
}

message TankRaw {
	string rank_type = 1;
	uint32 tank_id = 2;
	string tank_name = 3;
	string tank_type = 4;
	string tank_icon = 5;
	uint32 tank_tier = 6;
	uint64 frags = 7;
	uint64 spotted = 8;
	uint64 xp = 9;
	uint64 survived_battles = 10;
	uint64 battles = 11;
	uint64 hits = 12;
	uint64 wins = 13;
	uint64 shots = 14;
	uint64 damage_dealt = 15;
	double killed_avg = 16;
	uint32 tank_sort = 17;
	string tank_nation = 18;
	uint32 tank_status = 19;
	double battle_rate = 20;
}

message TankPercentRaw {
	uint32 tank_id = 1;
	double mastery = 2;
}

message TankList {
	repeated Tank list = 1;
	string buildTime = 2;
}

message TankStatByDate {
	repeated TankStatDate list = 1;
}

message TankStatDate {
	uint32 date = 1;
	TankStats stats = 2;
	TankStats statsHigher = 3;
}

message Tank {
	TankBase base = 1;
	TankStats stats = 2;
	TankStats statsHigher = 3;
}

message TankBase {
	uint32 ID = 1;
	string name = 2;
	uint32 tier = 3;
	TankEnum.nation nation = 4;
	TankEnum.type type = 5;
	TankEnum.shop shop = 6;
}

message TankStats {
	uint32 p1 = 1;
	uint32 p2 = 2;
	uint32 p3 = 3;
	uint64 frags = 7;
	uint64 spotted = 8;
	uint64 xp = 9;
	uint64 survived_battles = 10;
	uint64 battles = 11;
	uint64 hits = 12;
	uint64 wins = 13;
	uint64 shots = 14;
	uint64 damage_dealt = 15;
}
